fixing alignment and some errors

--- a/src/pages/Newtab/components/css/MainTop.scss
+++ b/src/pages/Newtab/components/css/MainTop.scss
@@ -23,6 +23,7 @@
 
     .theme-button {
       transform: scale(1.2);
+      align-items: center;
       cursor: pointer;
       margin-right: 0.5rem;
     }
